--- a/requirements.txt
+++ b/requirements.txt
@@ -205,7 +205,7 @@ tiktoken==0.7.0
 tinycss2==1.3.0
 tokenizers==0.20.0
 toml==0.10.2
-torch==2.4.1+cpu
+torch==2.4.1
 tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
